error in deliverable 2

--- a/MovieLens.ipynb
+++ b/MovieLens.ipynb
@@ -525,6 +525,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "53efb1c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 136,
    "id": "3cc48d2b",
    "metadata": {},
@@ -687,7 +695,7 @@
    "outputs": [],
    "source": [
     "# (8.3.8) Use join() to concatenate the lists in the box office values\n",
-    "box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)"
+    "box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n"
    ]
   },
   {
@@ -1539,7 +1547,7 @@
    "outputs": [],
    "source": [
     "# extract the running times and parse into hour+minute pattterns\n",
-    "running_time_extract = running_time.str.extract(r'(\\d+)\\s*ho?u?r?s?\\s*(\\d*)|(\\d+)\\s*m')"
+    "running_time_extract = running_time.str.extract(r'(\\d+)\\s*ho?u?r?s?\\s*(\\d*)|(\\d+)\\s*m')\n"
    ]
   },
   {
@@ -1550,7 +1558,7 @@
    "outputs": [],
    "source": [
     "# convert the strings to numeric values\n",
-    "running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)"
+    "running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)\n"
    ]
   },
   {
