deliverable 3, updated on 2

--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -88,15 +88,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wiki_movies_df = pd.Dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
    "outputs": [],
@@ -745,7 +736,7 @@
    ],
    "source": [
     "# 20. Check that the wiki_movies_df DataFrame looks like this. \n",
-    "wiki_movies_df"
+    "wiki_movies_df.head()"
    ]
   },
   {
